<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Network Planning Tool</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="import_groundplan">Import</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="erase">Erase</string>
    <string name="screenshot">Screenshot</string>
    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="requirementsText">1. Configure floor plan, networks and requirements</string>
    <string name="parametersText">2. Configure common parameters</string>
    <string name="toolsText">3. Run a prediction tool</string>
    <string name="resultsText">4. Review results</string>

    <string name="drawDataObjectText">draw</string>
    <string name="infoDataObjectText">info</string>
    <string name="editDataObjectText">edit</string>

    <string name="materialText">Material</string>
    <string name="brickText">Brick</string>
    <string name="layeredDrywallText">Layered Drywall</string>
    <string name="concreteText">Concrete</string>
    <string name="woodText">Wood</string>
    <string name="glassText">Glass</string>
    <string name="metalText">Metal</string>
    <string name="zeroDbText">0db</string>

    <string-array name="wallMaterials">
        <item>@string/brickText</item>
        <item>@string/layeredDrywallText</item>
        <item>@string/concreteText</item>
        <item>@string/woodText</item>
        <item>@string/glassText</item>
        <item>@string/metalText</item>
        <item>@string/zeroDbText</item>
    </string-array>

    <string-array name="doorMaterials">
        <item>@string/glassText</item>
        <item>@string/woodText</item>
    </string-array>

    <string-array name="windowMaterials">
        <item>@string/glassText</item>
    </string-array>

    <string name="thinText">Thin</string>
    <string name="thickText">Thick</string>

    <string-array name="thicknessArray">
        <item>@string/thinText</item>
        <item>@string/thickText</item>
    </string-array>

    <string name="snapToText">Snap to</string>
    <string name="snapToWallsText">Walls</string>
    <string name="snapToGridText">Grid</string>

    <string-array name="snapToArray">
        <item>@string/snapToGridText</item>
        <item>@string/snapToWallsText</item>
    </string-array>

    <string name="wallText">Wall</string>
    <string name="doorText">Door</string>
    <string name="windowText">Window</string>
    <string name="accessPointText">Access Point</string>
    <string name="connectionPointText">Connection Point</string>
    <string name="dataActivityText">Data Activity</string>
    <string name="eraserText">Eraser</string>
    <string name="editText">Edit</string>
    <string name="infoText">Info</string>

    <string name="renderDataText">Render Data</string>
    <string name="visualOptionsText">Visual Options</string>
    <string name="exportDataText">Export Data</string>
    <string name="measureText">Measure</string>

    <string name="dlinkText">DLink</string>
    <string name="customText">Custom</string>
    <string name="cc2420Text">CC2420</string>
    <string name="jn516xtext">JN516x</string>
    <string name="huaweiText">Huawei</string>

    <string-array name="wifiArray">
        <item>@string/dlinkText</item>
        <item>@string/customText</item>
    </string-array>

    <string-array name="sensorArray">
        <item>@string/cc2420Text</item>
        <item>@string/jn516xtext</item>
    </string-array>

    <string-array name="lteFemtocellArray">
        <item>@string/customText</item>
    </string-array>

    <string-array name="umtsFemtocellArray">
        <item>@string/huaweiText</item>
        <item>@string/customText</item>
    </string-array>

    <string name="wifiText">WiFi</string>
    <string name="sensorText">Sensor</string>
    <string name="lteFemtocellText">LTE Femtocell</string>
    <string name="umtsFemtocellText">UMTS Femtocell</string>

    <string name="g3Text">3G</string>
    <string name="g4Text">4G</string>

    <string-array name="accesspointsTypesArray">
        <item>@string/wifiText</item>
        <item>@string/sensorText</item>
        <item>@string/lteFemtocellText</item>
        <item>@string/umtsFemtocellText</item>
    </string-array>

    <string name="frequencyBand2100">2100</string>
    <string name="frequencyBand2400">2400</string>
    <string name="frequencyBand2600">2600</string>

    <string-array name="frequencyArray">
        <item>@string/frequencyBand2400</item>
    </string-array>

    <string name="frequency1">1</string>
    <string name="frequency2">2</string>
    <string name="frequency3">3</string>
    <string name="frequency4">4</string>
    <string name="frequency5">5</string>
    <string name="frequency6">6</string>
    <string name="frequency7">7</string>
    <string name="frequency8">8</string>
    <string name="frequency9">9</string>
    <string name="frequency10">10</string>
    <string name="frequency11">11</string>

    <string name="channel1">1</string>
    <string name="channel2">2</string>
    <string name="channel3">3</string>
    <string name="channel4">4</string>
    <string name="channel5">5</string>
    <string name="channel6">6</string>
    <string name="channel7">7</string>
    <string name="channel8">8</string>
    <string name="channel9">9</string>
    <string name="channel10">10</string>
    <string name="channel11">11</string>

    <string-array name="channelArray">
        <item>@string/channel1</item>
        <item>@string/channel2</item>
        <item>@string/channel3</item>
        <item>@string/channel4</item>
        <item>@string/channel5</item>
        <item>@string/channel6</item>
        <item>@string/channel7</item>
        <item>@string/channel8</item>
        <item>@string/channel9</item>
        <item>@string/channel10</item>
        <item>@string/channel11</item>
    </string-array>

    <string name="hdVideotext">HD video</string>
    <string name="actionGamesText">Action games</string>
    <string name="youtubeText">YouTube</string>
    <string name="surfingText">Surfing</string>
    <string name="noCoverageText">No coverage</string>

    <string-array name="activityArray">
        <item>@string/hdVideotext</item>
        <item>@string/actionGamesText</item>
        <item>@string/youtubeText</item>
        <item>@string/surfingText</item>
        <item>@string/noCoverageText</item>
    </string-array>

    <string name="networkAText">Network A</string>
    <string name="networkBText">Network B</string>
    <string name="networkCText">Network C</string>
    <string name="networkDText">Network D</string>
    <string name="networkEText">Network E</string>
    <string name="networkFText">Network F</string>
    <string name="networkGText">Network G</string>
    <string name="networkHText">Network H</string>

    <string-array name="networksArray">
        <item>@string/networkAText</item>
        <item>@string/networkBText</item>
        <item>@string/networkCText</item>
        <item>@string/networkDText</item>
        <item>@string/networkEText</item>
        <item>@string/networkFText</item>
        <item>@string/networkGText</item>
        <item>@string/networkHText</item>
    </string-array>

    <string name="whippText">WHIPP</string>
    <string name="tgnText">TGn IEEE Indoor</string>
    <string name="freespaceText">Free-space</string>
    <string name="multiwallText">Multiwall</string>
    <string name="oneslopeText">One-slope</string>

    <string-array name="pathLossModels">
        <item>@string/whippText</item>
        <item>@string/tgnText</item>
        <item>@string/freespaceText</item>
        <item>@string/multiwallText</item>
        <item>@string/oneslopeText</item>
    </string-array>

    <string name="receiver2400Text">Ref. receiver 2400</string>
    <string name="rec802.11n">802.11n</string>
    <string name="phone3G">3G phone</string>
    <string name="phone4G">4G phone</string>

    <string-array name="receivers">
        <item>@string/receiver2400Text</item>
        <item>@string/cc2420Text</item>
        <item>@string/jn516xtext</item>
        <item>@string/rec802.11n</item>
        <item>@string/phone3G</item>
        <item>@string/phone4G</item>
    </string-array>

    <string name="anywhereText">Anywhere</string>
    <string name="onWallText">On walls</string>

    <string-array name="apPlacements">
        <item>@string/anywhereText</item>
        <item>@string/onWallText</item>
    </string-array>

    <string name="thicknessText">Thickness</string>

    <string name="dataConnectionPointText">Data</string>
    <string name="powerConnectionPointText">Power</string>

    <string name="stopDrawingText">Stop Drawing</string>

    <string name="eraserInfoText">Click on a wall, intersection or accesspoint to erase it.</string>
    <string name="quickEraseText">Quick Erase</string>
    <string name="eraseAccessPointsText">Erase Access Points</string>
    <string name="eraseActivitiesText">Erase Activities</string>
    <string name="eraseConnectionPointsText">Erase Connection Points</string>

    <string name="editObjectText">Click on an object to edit it.</string>

    <string name="infoInfoText">Click on an object to get its properties.</string>

    <string name="savePlanTitle">Save floorplan</string>
    <string name="saveScreenshot">Save screenshot</string>
    <string name="saveDataTitle">Save data</string>

    <string name="connectionPointNotAdjacentToWall">Could not place connection point. It needs to be adjacent to a wall.</string>
    <string name="nothingToPlace">There is no object to place.</string>


</resources>