<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doorsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="doors" >

    <TextView
        android:id="@+id/materialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/doorsMaterialRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/doorsMaterialGlassRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/glassText" />

        <RadioButton
            android:id="@+id/doorsMaterialWoodRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woodText" />

    </RadioGroup>

    <TextView
        android:id="@+id/thicknessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thicknessText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/doorsThicknessRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/doorsThinRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/thinText" />

        <RadioButton
            android:id="@+id/doorsThickRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thickText" />

    </RadioGroup>

    <TextView
        android:id="@+id/snapToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snapToText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/doorsSnapToRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/doorsSnapToGridRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/snapToGridText" />

        <RadioButton
            android:id="@+id/doorsSnapToWallsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapToWallsText" />

    </RadioGroup>

    <Button
        android:id="@+id/stopDrawingButton"
        style="@style/MyButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="handleStopDrawing"
        android:text="@string/stopDrawingText" />

</LinearLayout>
