<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/windowsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="windows" >

    <TextView
        android:id="@+id/materialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/windowsMaterialRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="Material"
            android:text="@string/glassText" />

    </RadioGroup>

    <TextView
        android:id="@+id/thicknessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thicknessText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/windowsThicknessRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/thinText" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thickText" />
    </RadioGroup>

    <TextView
        android:id="@+id/snapToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snapToText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/windowsSnapToRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/snapToGridText" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapToWallsText" />
    </RadioGroup>

    <Button
        android:id="@+id/stopDrawingButton"
        style="@style/MyButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="handleStopDrawing"
        android:text="@string/stopDrawingText" />

</LinearLayout>
