<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ImageButton10"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton09"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton08"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton07"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton06"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton05"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton04"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton03"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="right" >

            <Button
                android:id="@+id/Button03"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:onClick="onMainFlipClick"
                android:tag="design"
                android:text="@string/requirementsText"
                android:textSize="10sp" />

            <Button
                android:id="@+id/Button02"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:onClick="onMainFlipClick"
                android:tag="parameters"
                android:text="@string/parametersText"
                android:textSize="10sp" />

            <Button
                android:id="@+id/Button01"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:onClick="onMainFlipClick"
                android:tag="tools"
                android:text="@string/toolsText"
                android:textSize="10sp" />

            <Button
                android:id="@+id/button10"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:onClick="onMainFlipClick"
                android:tag="results"
                android:text="@string/resultsText"
                android:textSize="10sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <com.ugent.networkplanningtool.layout.DrawingView
                android:id="@+id/drawingView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <com.ugent.networkplanningtool.layout.MyScrollBar
                android:id="@+id/myScrollBar1"
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <com.ugent.networkplanningtool.layout.MyScrollBar
                android:id="@+id/myScrollBar2"
                android:layout_width="16dp"
                android:layout_height="fill_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp" />

        </FrameLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ViewFlipper
                android:id="@+id/viewFlipper1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    layout="@layout/design_view" />

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    layout="@layout/parameters_view" />

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    layout="@layout/tools_view" />

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    layout="@layout/results_view" />

            </ViewFlipper>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</LinearLayout>
